# lambda_calculus

./: .gitignore  CMakeLists.txt  Definitions.cpp  Definitions.h  README.md  VarAnalysis.cpp  definitions.cpp  definitions.h  examples.h  main.cpp
include/: CMakeLists.txt  Definitions.h  Examples.h  VarAnalysis.h
src/: Definitions.cpp  VarAnalysis.cpp
test/: CMakeLists.txt  definitions_test.cpp  lambda_test.cpp  run_debug_tests.sh  run_tests.sh
